# demo_for_blog

core_demo/: CMakeLists.txt
core_demo/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
opengl_learn/: CMakeLists.txt  glad.c  main.cpp
opengl_learn/include/glad/: glad.h
uefi_c/: README.md  build.sh  common.c  common.h  efi.c  efi.h  main.c  uefi_app.c
